# X-TRACK

./: .gitignore  .gitmodules  LICENSE  README.md  SystemSave.json
3D Model/: X-Track Box.STL  bottom.stl  top.stl  外壳-主体.STL  外壳-侧盖.STL
3D Model/1.5英寸外壳/: bottom.stl  top.stl
3D Model/2.0英寸外壳/: README.md  bottom.stl  top.stl
ArtDesign/: 导航.ai  码表.ai
Firmware/X-TRACK/App/: App.cpp  App.h  Version.h
Hardware/: README.md  X-Track_Power.SchDoc  X-Track_Sheet.SchDoc  焊接调试指北.md
Hardware/X-TRACK 改进版/: README.md  X-Track_Power.SchDoc  X-Track_Sheet.SchDoc  X_TRACK.PrjPcb
Hardware/X-TRACK 改进版/历史版本/: GPS_LVGL_lqfp_V1.rar
Hardware/X-TRACK_240x320/: README.md  X-Track_Power.SchDoc  X-Track_Sheet.SchDoc  X_TRACK.PrjPcb
Resource/: 导航.ai
Resource/design/: 信息.ai
Software/: README.md
Software/Pack/: ArteryTek.AT32F435_437_DFP.2.0.6.pack  Keil.AT32F4xx_DFP.1.3.7.pack
Software/X-Track/: KeilClear.bat  README.md
Software/X-Track/App/: App.cpp
Software/X-Track/ArduinoAPI/: Arduino.c  Arduino.h  HardwareSerial.cpp  HardwareSerial.h  Print.cpp  Print.h  SPI.cpp  SPI.h  Stream.cpp  Stream.h  Tone.cpp  Tone.h  WCharacter.h  WMath.cpp  WString.cpp  WString.h  Wire.cpp  Wire.h  WireBase.cpp  WireBase.h  dtostrf.c  dtostrf.h  itoa.c  libmaple_types.h  wirish_math.h
Software/X-Track/Core/: HardwareSerial.cpp  SPI.cpp  SPI.h  Tone.cpp  Tone.h  adc.c  adc.h  delay.c  delay.h  extend_SRAM.c  exti.c  exti.h  gpio.c  gpio.h  i2c.h  mcu_config_template.h  mcu_core.h  mcu_type.h  pwm.c  pwm.h  rng.c  rng.h  rtc.c  rtc.h  timer.c  timer.h  wdg.c  wdg.h
Software/X-Track/Linux/: Makefile  REAEME.md  main.cpp
Software/X-Track/LinuxSDL2/: Makefile  README.md  main.cpp  mouse_cursor_icon.c
Software/X-Track/MDK-ARM/: proj.uvoptx  proj.uvprojx
Software/X-Track/MDK-ARM_F403A/: proj.uvprojx
Software/X-Track/MDK-ARM_F435/: proj.uvprojx
Software/X-Track/Simulator/: .editorconfig  .gitignore  .gitmodules  BuildAllTargets.cmd  BuildAllTargets.proj  LICENSE  LVGL.Simulator.sln  README.md
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/: CMakeLists.txt  README.md  library.json  lv_drivers.mk  lv_drv_conf_template.h  win_drv.c
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/display/: GC9A01.c  GC9A01.h  ILI9341.c  ILI9341.h  SHARP_MIP.c  UC1610.c  drm.c  fbdev.c  fbdev.h  monitor.c
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/gtkdrv/: README.md  gtkdrv.c  gtkdrv.h
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/indev/: FT5406EE8.c  evdev.c  evdev.h  keyboard.c  keyboard.h  libinput.c  libinput_drv.h  mouse.c  mouse.h  mousewheel.c  mousewheel.h  xkb.c  xkb.h
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/sdl/: sdl.c  sdl.h  sdl_common.c  sdl_common.h  sdl_gpu.c  sdl_gpu.h
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/wayland/: .gitignore  CMakeLists.txt  README.md  wayland.c  wayland.h
Software/X-Track/Simulator/LVGL.Simulator/lv_drivers/win32drv/: win32drv.c  win32drv.h
Software/X-Track/USER/: benchmark.inc  main.cpp  mcu_config.h
Tools/: README.md  RenameBin.bat  RenameBin_PNG.bat
Tools/GNSSToolKit_Lite/: GNSSToolKitLite_configs.ini
Tools/MapDownloadGen/: SharpMap.UI.xml  maptile.exe.config
Tools/旧版Bing地图转换工具(固件版本v1.5及以下)/: MapConv.bat
(+1082 files in other folders)
